# piecewise

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  index-sort-f.html  index-sort-l.html  index.html  meson.build  meson_options.txt
include/mz/: piecewise.hpp
include/mz/piecewise/: aggregate.hpp  arg_forwarder.hpp  builder.hpp  callable_overload.hpp  construct_helpers.hpp  constructors.hpp  factory.hpp  forward_tuple.hpp  helpers.hpp  lambda_overload.hpp  make_from_tuple.hpp  multifactory.hpp  multifail.hpp  tuple_list.hpp
subprojects/: catch.wrap
test/: arg_forwarder.cpp  basic_aggregate.cpp  main.cpp  make_from_tuple.cpp  multifail.cpp  tuple_list.cpp
usr/include/c++/7.3.0/: index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  iomanip.func-sort-c.html  iomanip.func.html  iomanip.gcov.html  iostream.func-sort-c.html  iostream.func.html  iostream.gcov.html  limits.func-sort-c.html  limits.func.html  limits.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  optional.func-sort-c.html  optional.func.html  optional.gcov.html  stdexcept.func-sort-c.html  stdexcept.func.html  stdexcept.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  variant.func-sort-c.html  variant.func.html  variant.gcov.html
usr/include/c++/7.3.0/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  enable_special_members.h.func-sort-c.html  enable_special_members.h.func.html  enable_special_members.h.gcov.html  exception.h.func-sort-c.html  exception.h.func.html  exception.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  invoke.h.func-sort-c.html  invoke.h.func.html  invoke.h.gcov.html  ios_base.h.func-sort-c.html  ios_base.h.func.html  ios_base.h.gcov.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  predefined_ops.h.func-sort-c.html  (+56 more)
usr/include/c++/7.3.0/ext/: aligned_buffer.h.func-sort-c.html  aligned_buffer.h.func.html  aligned_buffer.h.gcov.html  alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  type_traits.h.func-sort-c.html  type_traits.h.func.html  type_traits.h.gcov.html
